--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,8 +1,15 @@
 {
   "name": "ui-repo",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "1.0.0",
   "type": "module",
+  "main": "dist/lib/index.js",
+  "module":"dist/es/index.js",
+  "typings": "dist/lib/index.d.ts",
+  "files": [
+    "es",
+    "lib"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,6 +18,7 @@
   "dependencies": {
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "unplugin-vue-define-options": "^0.6.2",
+    "vite-plugin-dts": "^1.6.6",
     "vue": "^3.2.40"
   },
   "devDependencies": {
